force-app/main/default/main/default/objects/Plan__c/fields/Coverage_Level__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Level__c</fullName>
    <label>Coverage Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employee + Spouse</fullName>
            </value>
            <value>
                <fullName>Employee + Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>