force-app/main/default/main/default/objects/Plan__c/fields/Coverage_Period__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Period__c</fullName>
    <inlineHelpText>Coverage period for which this plan is valid</inlineHelpText>
    <label>Coverage Period</label>
    <referenceTo>Coverage_Period__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>