force-app/main/default/main/default/objects/Plan__c/fields/Minimum_Essential_Coverage_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Essential_Coverage_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Minimum Essential Coverage (MEC) indicator as defined by Affordable Care Act (ACA). Only applicable to health coverage</inlineHelpText>
    <label>Minimum Essential Coverage Indicator</label>
    <type>Checkbox</type>
</CustomField>