force-app/main/default/main/default/objects/Plan__c/fields/Minimum_Value_Plan_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Value_Plan_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Minimum Value Plan (MVP) indicator as defined by Affordable Care Act (ACA). Only applicable to health coverage offer.</inlineHelpText>
    <label>Minimum Value Plan Indicator</label>
    <type>Checkbox</type>
</CustomField>