force-app/main/default/main/default/objects/Plan__c/fields/Monthly_Employee_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Employee_Cost__c</fullName>
    <inlineHelpText>Monthly cost to the employee</inlineHelpText>
    <label>Monthly Employee Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>