force-app/main/default/main/default/objects/Plan__c/fields/Monthly_Employer_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Employer_Cost__c</fullName>
    <inlineHelpText>Monthly cost to the employer per employee</inlineHelpText>
    <label>Monthly Employer Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>