force-app/main/default/main/default/objects/Plan__c/fields/Plan_Selection_Display__c.field-meta.xml
<CustomField>
    <fullName>Plan_Selection_Display__c</fullName>
    <formula>Plan_Type__r.Name  + &apos; - &apos; +  Name + &apos; - &apos; +  TEXT(Coverage_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Selection Display</label>
    <type>Text</type>
</CustomField>