force-app/main/default/main/default/objects/Plan__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plan Type</label>
    <referenceTo>Coverage_Type__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>