force-app/main/default/main/default/objects/Plan__c/fields/Plan_Year_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Year_Start_Date__c</fullName>
    <formula>Coverage_Period__r.Coverage_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Year Start Date</label>
    <type>Date</type>
</CustomField>