force-app/main/default/main/default/objects/Plan__c/fields/Tobacco_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Tobacco_Surcharge__c</fullName>
    <inlineHelpText>Only applicable for health coverage offer</inlineHelpText>
    <label>Tobacco Surcharge</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>